prevent width changes when scrollbars appear

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scrollbar-gutter: stable;
+}
+
 #viz {
     height: 100px;
 }
